# glsl-language-server

./: CMakeLists.txt  bld.bat  cfg.bat
src/: includer.cpp  main.cpp  messagebuffer.cpp  utils.cpp
